# cuNLS

./: .coderabbit.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  llms.txt
cmake/: AddCUDSS.cmake  AddSpdlog.cmake  BundleStaticDeps.cmake  cunlsConfig.cmake.in
cunls/: CMakeLists.txt  cunls.h  llms.txt
cunls/common/: CMakeLists.txt  cublas_helper.cpp  cublas_helper.h  cuda_stream.cpp  cuda_stream.h  cudss_helper.cpp  cudss_helper.h  cusolver_helper.cpp  cusolver_helper.h  cusparse_helper.cpp  cusparse_helper.h  device_vector.h  helper.h  llms.txt  log.cpp  log.h  pinned_vector.h  profiler.cpp  profiler.h  type_traits.h  types.h  utils.cpp  utils.h
cunls/factor/: CMakeLists.txt  factor_batch.h  information_factor_batch.cpp  information_factor_batch.h  llms.txt  pnp_factor_batch.cu  pnp_factor_batch.h  point_to_plane_factor_batch.cu  point_to_plane_factor_batch.h  point_to_point_factor_batch.cu  point_to_point_factor_batch.h  prior_vector_factor_batch.cu  prior_vector_factor_batch.h  reprojection_factor_batch.cu  reprojection_factor_batch.h  se2_between_factor_batch.cu  se2_between_factor_batch.h  se2_prior_factor_batch.cu  se2_prior_factor_batch.h  se3_between_factor_batch.cu  se3_between_factor_batch.h  se3_prior_factor_batch.cu  se3_prior_factor_batch.h  similarity2_between_factor_batch.cu  similarity2_between_factor_batch.h  similarity2_prior_factor_batch.cu  similarity2_prior_factor_batch.h  similarity3_between_factor_batch.cu  similarity3_between_factor_batch.h  similarity3_prior_factor_batch.cu  similarity3_prior_factor_batch.h  sized_factor_batch.h  sl4_between_factor_batch.cu  sl4_between_factor_batch.h  sl4_prior_factor_batch.cu  sl4_prior_factor_batch.h  so2_between_factor_batch.cu  so2_between_factor_batch.h  so2_prior_factor_batch.cu  so2_prior_factor_batch.h  (+10 more)
cunls/linear_solver/: CMakeLists.txt  block_sparse_pcg_solver.cu  block_sparse_pcg_solver.h  csr_sparse_linear_solver.h  cudss_sparse_linear_solver.cpp  cudss_sparse_linear_solver.h  dense_cholesky_solver.cu  dense_cholesky_solver.h  dense_linear_solver.cu  dense_linear_solver.h  dense_qr_solver.cu  dense_qr_solver.h  llms.txt  sparse_linear_solver.cpp  sparse_linear_solver.h
cunls/math/: CMakeLists.txt  dense_matrix_ops.cu  dense_matrix_ops.h  lie_math.cu  lie_math.h  llms.txt  sim_lie_math.cu  sim_lie_math.h  sl_lie_math.cu  sl_lie_math.h  so_se_lie_math.cu  so_se_lie_math.h
cunls/minimizer/: CMakeLists.txt  cusparse_matrix_multiplier.cpp  cusparse_matrix_multiplier.h  device_reduction.cu  device_reduction.h  fast_matrix_multiplier.cu  fast_matrix_multiplier.h  gauss_newton_minimizer.cu  gauss_newton_minimizer.h  jacobian_ops.cu  jacobian_ops.h  levenberg_marquardt_minimizer.cpp  levenberg_marquardt_minimizer.h  llms.txt  minimizer_state.cu  minimizer_state.h  problem.cpp  problem.h  residual_batch.cu  residual_batch.h  sparse_matrix.cu  sparse_matrix.h  sparse_matrix_multiplication.cpp  sparse_matrix_multiplier.cpp  sparse_matrix_multiplier.h
cunls/robustifier/: CMakeLists.txt  arctan_loss_function_batch.cu  arctan_loss_function_batch.h  cauchy_loss_function_batch.cu  cauchy_loss_function_batch.h  huber_loss_function_batch.cu  huber_loss_function_batch.h  llms.txt  loss_function_batch.h  scaled_loss_function_batch.cu  scaled_loss_function_batch.h  soft_lone_loss_function_batch.cu  soft_lone_loss_function_batch.h  tolerant_loss_function_batch.cu  tolerant_loss_function_batch.h  trivial_loss_function_batch.cu  trivial_loss_function_batch.h  tukey_loss_function_batch.cu  tukey_loss_function_batch.h
cunls/state/: CMakeLists.txt  llms.txt  se2_state_batch.cu  se2_state_batch.h  se3_state_batch.cu  se3_state_batch.h  similarity2_state_batch.cu  similarity2_state_batch.h  similarity3_state_batch.cu  similarity3_state_batch.h  sized_state_batch.h  sl4_state_batch.cu  sl4_state_batch.h  so2_state_batch.cu  so2_state_batch.h  so3_state_batch.cu  so3_state_batch.h  state_batch.h  state_batch_ops.cu  state_batch_ops.h  vector_state_batch.cu  vector_state_batch.h
docker/: Dockerfile.ci
docs/: build_in_docker.sh
docs_build/: genindex.html  index.html  installation.html  introduction.html  licensing.html  objects.inv  quick_start.html  search.html  searchindex.js  testing.html  tutorial.html
examples/: CMakeLists.txt  README.md  build_in_docker.sh
examples/custom_factor/: README.md  main.cu
examples/pose_graph_optimization/: README.md  main.cpp
examples/sparse_bundle_adjustment/: README.md  main.cpp
examples/utils/: camera_utils.h  se3_utils.h  validation.h
python/: CMakeLists.txt  pyproject.toml
python/examples/: custom_warp_factor.py  custom_warp_state.py  pose_graph_optimization.py  se3_utils.py  sparse_bundle_adjustment.py
python/pycunls/: __init__.py  _pycunls_core.pyi  warp.py
python/src/: bind_factor.cpp  bind_loss.cpp  bind_minimizer.cpp  bind_problem.cpp  bind_state.cpp  bind_types.cpp  bindings.h  py_factor_wrappers.cpp  py_factor_wrappers.h  pycunls_module.cpp
python/tests/: conftest.py  test_cupy_interop.py  test_factor_batches.py  test_loss_functions.py  test_minimizer.py  test_state_batches.py  test_warp_factor.py  test_warp_state.py
scripts/: Dockerfile  Dockerfile.python  build_and_test_install.sh  build_cunls.sh  build_cunls_in_docker.sh  build_pycunls.sh  build_pycunls_in_docker.sh  test_cunls_in_docker.sh  test_pycunls_in_docker.sh
tests/: cusparse_matrix_multiplier_test.cpp  decreasing_scale_minimizer_test.cpp  dense_cholesky_solver_test.cpp  dense_linear_solver_test.cpp  dense_matrix_ops_test.cpp  dense_qr_solver_test.cpp  device_vector_test.cpp  factor_batch_test.cpp  fast_matrix_multiplier_test.cpp  gauss_newton_test.cpp  jacobian_ops_test.cpp  lie_between_factors_smoke_test.cpp  lie_math_test.cu  loss_function_test.cpp  pgo_minimizer_test.cpp  pnp_factor_batch_test.cpp  point_to_plane_factor_batch_test.cpp  point_to_point_factor_batch_test.cpp  prior_vector_prior_factor_test.cpp  problem_test.cpp  residual_batch_test.cpp  (+32 more)
tests/install_test/: CMakeLists.txt  main.cpp
(+54 files in other folders)
